--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/OSVR/UIforETWbins.git
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
-	url = https://github.com/gabime/spdlog.git
+	url = https://github.com/OSVR/spdlog.git
